--- a/src/main/webapp/Register.html
+++ b/src/main/webapp/Register.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Registration Form</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <form method="post" action="./RegisterServlet">
